--- a/petite-router/package.json
+++ b/petite-router/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@coder-ka/petite-router",
-  "version": "0.0.10",
+  "version": "0.0.11",
   "license": "MIT",
   "description": "Manage session history with JavaScript",
   "author": "KOeda <coder.ka.issues@gmail.com>",
@@ -31,6 +31,6 @@
     "path-to-regexp": "^6.2.0"
   },
   "peerDependencies": {
-    "react": "^17.0.2"
+    "react": "*"
   }
 }
