--- a/petite-router/package.json
+++ b/petite-router/package.json
@@ -28,10 +28,10 @@
     "typescript": "^4.6.2"
   },
   "dependencies": {
-    "history": "^5.3.0",
     "path-to-regexp": "^6.2.0"
   },
   "peerDependencies": {
+    "history": "*",
     "react": "*"
   }
 }
