--- a/petite-router/package.json
+++ b/petite-router/package.json
@@ -1,10 +1,18 @@
 {
   "name": "@coder-ka/petite-router",
-  "version": "0.0.18",
+  "version": "0.0.19",
   "license": "MIT",
   "description": "Manage session history with JavaScript",
   "author": "KOeda <coder.ka.issues@gmail.com>",
   "repository": "coder-ka/petite-router",
+  "keywords": [
+    "react",
+    "router",
+    "route",
+    "minimalistic",
+    "history",
+    "link"
+  ],
   "main": "./dist/petite-router.cjs",
   "module": "./dist/petite-router.mjs",
   "exports": {
